fix CSS z-index stuff...

--- a/app/stylus/components/Peer.styl
+++ b/app/stylus/components/Peer.styl
@@ -13,10 +13,10 @@
 
 	> .indicators {
 		position: absolute;
-		z-index: 10
+		z-index: 10;
 		top: 0;
-		left: 0;
 		right: 0;
+		width: 150px;
 		display: flex;
 		flex-direction:; row;
 		justify-content: flex-end;
