--- a/app/stylus/components/PeerView.styl
+++ b/app/stylus/components/PeerView.styl
@@ -20,7 +20,7 @@
 		$backgroundTint = #000;
 
 		position: absolute;
-		z-index: 20
+		z-index: 5;
 		top: 0;
 		bottom: 0;
 		left: 0;
